--- a/css/menu-mobile.css
+++ b/css/menu-mobile.css
@@ -1,6 +1,4 @@
-@media screen and (max-width:768px) {
-
-    * {
+* {
         box-sizing: border-box;
     }
 
@@ -26,7 +24,7 @@
     }
 
     p {
-        font-weight: 100;
+        font-weight: 300;
     }
 
     header {
@@ -45,15 +43,40 @@
         color: black;     
     }
 
-    img {
-            width: 100%;
-        }
+    .banniere {
+        width: 100%;
+        height: 300px;
+        position: relative;
+    }
+
+    .banniere img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        
+    }
+
+    .carte-menu {
+        display: flex;
+        width: 100%;
+        margin: 0 auto;
+        padding: 15px 15px 0 15px;
+        flex-direction: column;
+        position: absolute;
+        border-radius: 25px 25px 0 0;
+        background: #f6f6f6;
+        top: 40%;
+    }
+
+    .carte-menu h2 {
+        font-weight: 100;
+        margin-bottom: 0;
+    }
 
     .titre {
-        
         display: flex;
         align-items: center;
-        padding-top: 8%;
+        padding-top: 5%;
         border-radius: 15px;
     }
 
@@ -64,25 +87,7 @@
 
     .titre .far {
         padding-left: 11%;
-    }
-
-    .carte-menu {
-        display: flex;
-        width: 100%;
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 15px 15px 0 15px;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        flex-direction: column;
-        position: relative;
-        border-radius: 15px 15px 0 0;
-        background: #f6f6f6;
-    }
-
-    .carte-menu h2 {
-        font-weight: 100;
-        margin-bottom: 0;
+        margin-bottom: 5%;
     }
 
     .carte {
@@ -95,43 +100,117 @@
         display: flex;
         flex-direction: column;
         width: 30%;
+        animation: slide 1s linear;
     }
 
-    .bordure1 {
-        background: #99E2D0;
-        height: 3px;
-        width: 65%;
+    @keyframes slide {
+        from {
+            transform: translateY(200px);
+            opacity: 0;
+        }
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
     }
 
-    .bordure2 {
+    .bordure {
         background: #99E2D0;
         height: 3px;
-        width: 47%;
-    }
-   
-    .bordure3 {
-        background: #99E2D0;
-        height: 3px;
-        width: 75%;
+        width: 60px;
     }
 
     .carte-description {
+        display: flex;
         background: white;
         border-radius: 15px;
-        margin-top: 5%;
         padding-left: 4%;
+        width: 100%;
+        position: relative;
+        margin-top: 5%;
+        animation: slideDown 1.2s linear;
     }
 
+    @keyframes slideDown {
+        from {
+            transform: translateY(200px);
+            opacity: 0;
+        }
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+    
     .carte-description p {
+        text-overflow: ellipsis;
+        white-space : nowrap;
+        overflow: hidden;
+        margin: 3% 5% 8% 0;
+    }
+
+    .carte-description h3 {
+        text-overflow: ellipsis;
+        white-space : nowrap;
+        overflow: hidden;
+        margin: 8% 0 3% 0;
+    }
+
+    .info {
+        flex-basis: 49%;
+        margin: 0 5% 0 0;
+    }
+
+    .prix {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: flex-end;
+        width: 24%;  
+        height: 100%;
+        position: absolute;
+        right: 0; 
+        z-index: 2;
     }
 
-    span {
-        font-weight: 500;
-        margin-right: 5%;
+    .prix p {
+        font-weight: 500; 
+        padding-bottom: 10%; 
     }
 
+    .checkbox input[type="checkbox"] {
+        display: none;
+    }
+ 
+    .checkbox {
+        display: flex;
+        width: 24%;
+        height: 100%;
+        position: absolute;
+       
+        border-radius: 0 15px 15px 0 ;
+        justify-content: center;
+        align-items: center;
+        z-index: 0;
+        right: 0;
+    }
+
+    .checkbox .fas {
+        color: white;   
+    }
+
+    .checkbox input[type="checkbox"]:checked ~ .checked {
+        display: inline-block;   
+    }
+
+    .checkbox:hover {
+        background-color: #99E2D0;
+        z-index: 1;
+    }
+    .prix:hover {
+        right: 24%;
+        transition: all 3000ms;
+    }
+ 
     .commander {
         margin-left: auto;
         margin-right: auto;
@@ -158,44 +237,42 @@
         cursor: pointer;
     }
 
+    footer {
+        padding-left: 4%;
+        background: #353535;
+        color: white;
+        position: absolute;
+        bottom: 100%;
+    }
 
+    footer h2 {
+        font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
+        margin-top: 0;
+        margin-left: 4%;
+        padding-top: 7%;
+        font-size: 28px;
+    }
 
+    footer .fas {
+        color: white;
+        padding: 0 2% 0 0;
+    }
 
-footer {
-    padding-left: 4%;
-    background: #353535;
-    color: white;
-}
+    .footer {
+        display: block;
+        padding-bottom: 15%;
+    }
 
-footer h2 {
-    font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
-    margin-top: 0;
-    margin-left: 4%;
-    padding-top: 7%;
-    font-size: 28px;
-}
+    .footer p {
+        padding: 2% 0 0 0;
+        color: white;
+        font-weight: 400;
+        margin: 1% 0 1% 4%;
+    }
 
-footer .fas {
-    color: white;
-    padding: 0 2% 0 0;
-}
+    footer a {
+        text-decoration: none;
+        color: white;
+        padding-bottom: 15%;
+    }
 
-.footer {
-    display: block;
-    padding-bottom: 15%;
-}
-
-.footer p {
-    padding: 2% 0 0 0;
-    color: white;
-    font-weight: 400;
-    margin: 1% 0 1% 4%;
-}
-
-footer a {
-    text-decoration: none;
-    color: white;
-    padding-bottom: 15%;
-}
-
-}
