--- a/css/accueil-desktop.css
+++ b/css/accueil-desktop.css
@@ -1,45 +1,195 @@
 @media screen and (min-width: 768px) {
 
+    .loader {
+    display: flex;
+    position: fixed;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 2.5em;
+    align-items: baseline;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    animation: loader 3s forwards;
+    z-index: -1;
+}
+
+@keyframes loader {
+    0% {
+        opacity: 1;
+        z-index: 9999;
+    }
+
+    95% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        z-index: -1;
+    }
+}
+
+.loader p {
+    font-family: "Shrikhand", "Roboto", "Sans-serif";
+    font-size: 90px;
+    opacity: 0.7;
+}
+
+.ball {
+    background-color: rgb(0,0,0,0.2);
+    width: 10%;
+    height: 1.5em;
+    border-radius: 1em;
+    text-align: center;
+    font-size: 1em;
+    padding: 0.2em;
+    width: 1.5em;
+    border-style: none;
+    margin: 1em;
+    animation: ball .5s infinite ;
+}
+
+#ball-1 {
+    animation: ball1 1.25s infinite;
+}
+
+#ball-2 {
+    animation: ball2 1.25s infinite;
+}
+
+#ball-3 {
+    animation: ball3 1.25s infinite;
+}
+
+@keyframes ball1 {
+    0% {
+        transform: scale(1);
+    }
+
+    20% {
+        transform: scale(1.5);
+        background: #9356dc;
+        opacity: 0.8;
+    }
+
+    40% {
+        transform: scale(1);
+    }
+
+    60% {
+        transform: scale(1);
+    }
+
+    80% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes ball2 {
+    0% {
+        transform: scale(1);
+    }
+
+    20% {
+        transform: scale(1);
+    }
+
+    40% {
+        transform: scale(1.5) translate(0%,-25%);
+        background: #99e2d0;
+        opacity: 0.8;
+    }
+
+    60% {
+        transform: scale(1);
+    }
+
+    80% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes ball3 {
+    0% {
+        transform: scale(1);
+    }
+
+    20% {
+        transform: scale(1);
+    }
+
+    40% {
+        transform: scale(1);
+    }
+
+    60% {
+        transform: scale(1.5);
+        background: #ff79da;
+        opacity: 0.8;
+    }
+
+    80% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
     h1 {
         font-size: 42px;
         font-family: "Shrikhand", Geneva, Tahoma, sans-serif;
+        margin-top: 1%;
     }
 
     header {
         flex-direction: row;
         flex-basis: 100%;
-        margin-bottom: 5%;
+        margin-bottom: 3%;
     }
 
-    header h1 {
-        flex-basis: 69%;
-        margin: 0 0 0 12%;
-    }
-
-    header nav {
-        flex-basis: 30%;
+    header {
+        flex-direction: column;
+        margin-bottom: 2%;
     }
 
     .information {
         display: flex;
+        flex-direction: column;
         justify-content: space-evenly;
+        margin-left: auto;
+        margin-right: auto;
+        width: 95%;
     }
 
     article {
-        padding: 0 3%;
+        padding-top: 2%;
+        padding-bottom: 2%;
         justify-content: space-evenly;
-        margin: 4% 0;
+        margin: 1% 0;
+        border-radius: 25px;
     }
 
     article h2 {
-        margin: 0;
+        margin: 0 0 1% 0;
     }
 
     .degrade {
         background: linear-gradient(to top left, #9356dc, #ff79da );
         border-color: transparent;
-        margin: 3% 0;
-        width: 65%;
+        margin: 3% 0 1% 0;
+        width: 35%;
         height: 55px;
         border-radius: 25px;
         font-weight: bold;
@@ -54,31 +204,45 @@
     }
 
     .fonctionnement {
-        width: 50%;
-        margin: 0 4%;
+        width: 100%;
+        margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
 
     .fonctionnement h2 {
         margin-left: 2%;
+        margin-right: 70%;
     }
 
     .liste-fonc {
-        margin-bottom: 5%;
+        margin: 1% 3% 4% 0;
+        width: 30%;
     }
 
     .restaurants {
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
-        padding-bottom: 4%;
+        justify-content: space-between;
+        padding-bottom: 0;
+        width: 80%;
+        border-radius: 25px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 34px;
+
     }
 
     .restaurants h2 {
-        margin-right: 90%;
+        margin-right: 70%;
+        
+        margin-left: 0;
     }
 
     .carte {
-        width: 45%;
+        width: 46%;
+        margin-right: 34px;
     }
 
     .carte img {
@@ -87,6 +251,10 @@
 
     .info-titre h3 {
         margin: 1% 0 1% 0;
+    }
+
+    footer {
+        margin-top: 2%;
     }
 
     footer h2 {
@@ -99,10 +267,5 @@
         width: 90%;
         padding-bottom: 5%;
     }
-
-
-
-
-
 
 }
