--- a/css/menu-tablette.css
+++ b/css/menu-tablette.css
@@ -1,5 +1,7 @@
 @media screen and (min-width: 768px) {
 
+    /*--HEADER--*/
+
     header {
         padding-top: 4%;
     }
@@ -11,6 +13,10 @@
     .banniere {
         position: unset;
     }
+
+    /*--HEADER-FIN--*/
+
+    /*--MENU--*/
 
     .carte-menu {
         width: 80%;
@@ -59,6 +65,10 @@
         margin-top: 0;
     }
 
+    /*--MENU-FIN--*/
+
+    /*--FOOTER--*/
+
     footer {
         margin-top: 2%;
     }
@@ -74,7 +84,7 @@
         padding-bottom: 5%;
     }
 
-
+    /*--FOOTER-FIN--*/
 
 
 
