--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,299 +1,318 @@
 * {
-        box-sizing: border-box;
-    }
+    box-sizing: border-box;
+}
 
-    body {
-        font-family: "Roboto", Geneva, Tahoma, sans-serif;
-        font-size: 22px;
-        margin: 0;
-    }
+body {
+    font-family: "Roboto", Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    margin: 0;
+}
 
-   .loader {
-       display: none;
-   }
+.loader {
+    display: none;
+}
 
-    h1 {
-        font-size: 34px;
-        font-family: "Shrikhand", Geneva, Tahoma, sans-serif;
-        margin: 3% auto 1% auto;
-    }
+h1 {
+    font-size: 34px;
+    font-family: "Shrikhand", Geneva, Tahoma, sans-serif;
+    margin: 3% auto 1% auto;
+}
 
-    h2 {
-        font-size: 24px;
-    }
+h2 {
+    font-size: 24px;
+}
 
-    h3 {
-        font-size: 22px;
-    }
+h3 {
+    font-size: 22px;
+}
 
-    p {
-        font-weight: 100;
-    }
+p {
+    font-weight: 100;
+}
 
-    strong {
-        font-weight: 500;
-    }
+strong {
+    font-weight: 500;
+}
 
-    header {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+    /*--HEADER--*/
 
-    nav {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        background-color: #eaeaea;
-        justify-content: center;
-        box-shadow: inset 0px 11px 10px -10px #bababa;
-    }
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-    nav p {
-        padding: 0 2%;
-    }
+nav {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: #eaeaea;
+    justify-content: center;
+    box-shadow: inset 0px 11px 10px -10px #bababa;
+}
 
-    nav i {
-        padding: 0 2%;
-    }
+nav p {
+    padding: 0 2%;
+}
 
-    article {
-        display: flex;
-        flex-direction: column;
-        background-color: #f6f6f6;
-        text-align: center;
-        align-items: center;
-        padding-bottom: 5%;
-    }
+nav i {
+    padding: 0 2%;
+}
 
-    article p {
-        margin: 0;
-    }
+    /*--HEADER-FIN--*/
 
-    article a {
-        display: flex;
-        text-decoration: none;
-        color: white;
-        font-size: 19px;
-        height: 100%;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-    }
+    /*--ARTICLE--*/
 
-    .degrade {
-        background: linear-gradient(to top left, #9356dc, #ff79da );
-        border-color: transparent;
-        margin: 5% 0;
-        width: 65%;
-        height: 55px;
-        border-radius: 25px;
-        font-weight: bold;
-        box-shadow: 2px 4px 4px #BCABC9;
-        opacity: 1;
-    }
+article {
+    display: flex;
+    flex-direction: column;
+    background-color: #f6f6f6;
+    text-align: center;
+    align-items: center;
+    padding-bottom: 5%;
+}
 
-    .degrade:hover {
-        opacity: 0.8;
-        box-shadow: 2px 8px 12px #BCABC9;
-        cursor: pointer;
-    }
+article p {
+    margin: 0;
+}
 
-    .fonctionnement {
-        margin: 10% 4% ;
-        width: 90%;
-    }
+article a {
+    display: flex;
+    text-decoration: none;
+    color: white;
+    font-size: 19px;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
 
-    .liste-fonc {
-        display: flex;
-        justify-content: space-evenly;
-        background: #f6f6f6;
-        margin-bottom: 10%;
-        border-radius: 25px;
-        box-shadow: 0 6px 12px rgba(0, 0, 0, .1);
-        height: 90px;
-        align-items: center;
-        position: relative;
-        margin-left: 4%;
-    }
+.degrade {
+    background: linear-gradient(to top left, #9356dc, #ff79da );
+    border-color: transparent;
+    margin: 5% 0;
+    width: 65%;
+    height: 55px;
+    border-radius: 25px;
+    font-weight: bold;
+    box-shadow: 2px 4px 4px #BCABC9;
+    opacity: 1;
+}
 
-    .numero {
-        width: 27px;
-        border: 1px solid #9356dc;
-        border-radius: 50px;
-        background-color: #9356dc;
-        color: white;
-        font-weight: 400;
-        text-align: center;
-        position: absolute;
-        left: -15px;
-    }
+.degrade:hover {
+    opacity: 0.8;
+    box-shadow: 2px 8px 12px #BCABC9;
+    cursor: pointer;
+}
 
-    .liste-fonc i {
-        margin-right: 5%;
-        position: absolute;
-        left: 40px;
-        font-size: xx-large;
-    }
+    /*--ARTICLE-FIN--*/
 
-    .texte {
-        font-weight: 400;
-        position: absolute;
-        left: 100px;
-    }
+    /*--FONCTIONNEMENT--*/
 
-    .liste-fonc:hover {
-        background: #f5edff;
-        cursor: pointer;
-    }
+.fonctionnement {
+    margin: 10% 4% ;
+    width: 90%;
+}
 
-    .liste-fonc i:hover {
-        color: #9356dc;
-        cursor: pointer;
-    }
+.liste-fonc {
+    display: flex;
+    justify-content: space-evenly;
+    background: #f6f6f6;
+    margin-bottom: 10%;
+    border-radius: 25px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .1);
+    height: 90px;
+    align-items: center;
+    position: relative;
+    margin-left: 4%;
+}
 
-    .restaurants {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background: #f6f6f6;
-        justify-content: space-between;
-        padding-bottom: 15%;
-    }
+.numero {
+    width: 27px;
+    border: 1px solid #9356dc;
+    border-radius: 50px;
+    background-color: #9356dc;
+    color: white;
+    font-weight: 400;
+    text-align: center;
+    position: absolute;
+    left: -15px;
+}
 
-    .restaurants h2 {
-        align-self: flex-start;
-        margin-left: 4%;
-    }
+.liste-fonc i {
+    margin-right: 5%;
+    position: absolute;
+    left: 40px;
+    font-size: xx-large;
+}
 
-    .carte {
-        display: flex;
-        flex-direction: column;
-        border-radius: 15px;
-        width: 92%;
-        box-shadow: 0 6px 12px rgba(0, 0, 0, .1);
-        margin-bottom: 5%;
-    }
+.texte {
+    font-weight: 400;
+    position: absolute;
+    left: 100px;
+}
+
+.liste-fonc:hover {
+    background: #f5edff;
+    cursor: pointer;
+}
+
+.liste-fonc i:hover {
+    color: #9356dc;
+    cursor: pointer;
+}
+
+    /*--FONCTIONNEMENT-FIN--*/
+
+    /*--RESTAURANTS--*/
+
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #f6f6f6;
+    justify-content: space-between;
+    padding-bottom: 15%;
+}
+
+.restaurants h2 {
+    align-self: flex-start;
+    margin-left: 4%;
+}
+
+.carte {
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    width: 92%;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .1);
+    margin-bottom: 5%;
+}
     
-    .carte img {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-        object-position: top;
-        border-radius: 15px 15px 0 0;
-    }
+.carte img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 15px 15px 0 0;
+}
 
-    .carte a {
-        text-decoration: none;
-        color: black;
-    }
+.carte a {
+    text-decoration: none;
+    color: black;
+}
 
-    .carte-image {
-        position: relative;
-    }
+.carte-image {
+    position: relative;
+}
 
-    .etiquette {
-        position: absolute;
-        right: 10px;
-        top: -5px;
-        background: #99e2d0;
-        font-weight: 500;
-        color: #269D80;
-        padding: 2%;
-    }
+.etiquette {
+    position: absolute;
+    right: 10px;
+    top: -5px;
+    background: #99e2d0;
+    font-weight: 500;
+    color: #269D80;
+    padding: 2%;
+}
 
-    .info-titre {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        margin-left: 4%;
-        margin-right: 6%;
-        position: relative;
-    }
+.info-titre {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 4%;
+    margin-right: 6%;
+    position: relative;
+}
 
-    .info-titre h3 {
-        margin: 3% 0 1% 0;
-        font-size: 23px;
-    }
+.info-titre h3 {
+    margin: 3% 0 1% 0;
+    font-size: 23px;
+}
 
-    .info-titre .far {
-        margin-top: 22px;
-        position: absolute;
-        right: 1px;
-        top: 20px;
-        font-size: xx-large;
-    }
+.info-titre .far {
+    margin-top: 22px;
+    position: absolute;
+    right: 1px;
+    top: 20px;
+    font-size: xx-large;
+}
 
-    .info-titre .fas {
-        position: absolute;
-        margin-top: 22px;
-        right: 1px;
-        top: 20px;
-        font-size: xx-large;
-    }
+.info-titre .fas {
+    position: absolute;
+    margin-top: 22px;
+    right: 1px;
+    top: 20px;
+    font-size: xx-large;
+}
     
-    .info-titre .far:hover {
-        display: none;
-    }
+.info-titre .far:hover {
+    display: none;
+}
 
-    .info-titre .fas::before {
-        content: "\f004";
-        font-weight: bold;
-        color: transparent;
-        transform-origin: bottom;
-        transition: all 0.8s linear 0s;
-    }
+.info-titre .fas::before {
+    content: "\f004";
+    font-weight: bold;
+    color: transparent;
+    transform-origin: bottom;
+    transition: all 0.8s linear 0s;
+}
 
-    .info-titre .fas:hover::before{
-        display: block;
-        color: #9356dc;
-    }
+.info-titre .fas:hover::before{
+    display: block;
+    color: #9356dc;
+}
 
-    .info-titre .far:hover {
-        z-index: 0;
-        cursor: pointer;
-        color: transparent;
-    }
+.info-titre .far:hover {
+    z-index: 0;
+    cursor: pointer;
+    color: transparent;
+}
 
-
-    .info {
-        margin: 0 0 4% 0;
-    }
+.info {
+    margin: 0 0 4% 0;
+}
     
-    footer {
-        padding-left: 4%;
-        background: #353535;
-        color: white;
-    }
+    /*--RESTAURANTS-FIN--*/
 
-    footer h2 {
-        font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
-        margin-top: 0;
-        margin-left: 4%;
-        padding-top: 7%;
-        font-size: 28px;
-    }
+    /*--FOOTER--*/
 
-    footer .fas {
-        color: white;
-        padding: 0 2% 0 0;
-    }
+footer {
+    padding-left: 4%;
+    background: #353535;
+    color: white;
+}
 
-    .footer {
-        display: block;
-        padding-bottom: 15%;
-    }
+footer h2 {
+    font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
+    margin-top: 0;
+    margin-left: 4%;
+    padding-top: 7%;
+    font-size: 28px;
+}
 
-    .footer p {
-        padding: 2% 0 0 0;
-        color: white;
-        font-weight: 400;
-        margin: 1% 0 1% 4%;
-    }
+footer .fas {
+    color: white;
+    padding: 0 2% 0 0;
+}
 
-    footer a {
-        text-decoration: none;
-        color: white;
-        padding-bottom: 15%;
-    }
+.footer {
+    display: block;
+    padding-bottom: 15%;
+}
+
+.footer p {
+    padding: 2% 0 0 0;
+    color: white;
+    font-weight: 400;
+    margin: 1% 0 1% 4%;
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+    padding-bottom: 15%;
+}
+
+    /*--FOOTER-FIN--*/
 
