--- a/css/style-tablette.css
+++ b/css/style-tablette.css
@@ -1,161 +1,272 @@
 @media only screen and (min-width: 768px) {
 
+    /*--LOADER--*/
+
     .loader {
-    display: flex;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 2.5em;
-    align-items: baseline;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    z-index: -1;
-    background-color: white;
-    opacity: 50%;
-    margin: 0;
-    padding: 0;
-    animation: loader 3s forwards;
-}
-
-@keyframes loader {
-    0% {
-        opacity: 1;
-        z-index: 9999;
-    }
-
-    95% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 2.5em;
+        align-items: baseline;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
         z-index: -1;
-    }
+        background-color: white;
+        opacity: 50%;
+        margin: 0;
+        padding: 0;
+        animation: loader 3s forwards;
+        -webkit-animation: loader 3s forwards;
 }
 
-.loader p {
-    font-family: "Shrikhand", "Roboto", "Sans-serif";
-    font-size: 90px;
-    opacity: 0.7;
-}
+    @keyframes loader {
+        0% {
+            opacity: 1;
+            z-index: 9999;
+        }
 
-.ball {
-    background-color: rgb(0,0,0,0.2);
-    width: 10%;
-    height: 1.5em;
-    border-radius: 1em;
-    text-align: center;
-    font-size: 1em;
-    padding: 0.2em;
-    width: 1.5em;
-    border-style: none;
-    margin: 1em;
-    animation: ball .5s infinite ;
-}
+        95% {
+            opacity: 1;
+        }
 
-#ball-1 {
-    animation: ball1 1.25s infinite;
-}
-
-#ball-2 {
-    animation: ball2 1.25s infinite;
-}
-
-#ball-3 {
-    animation: ball3 1.25s infinite;
-}
-
-@keyframes ball1 {
-    0% {
-        transform: scale(1);
-    }
-
-    20% {
-        transform: scale(1.5);
-        background: #9356dc;
-        opacity: 0.8;
-    }
-
-    40% {
-        transform: scale(1);
-    }
-
-    60% {
-        transform: scale(1);
-    }
-
-    80% {
-        transform: scale(1);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
-
-@keyframes ball2 {
-    0% {
-        transform: scale(1);
-    }
-
-    20% {
-        transform: scale(1);
-    }
-
-    40% {
-        transform: scale(1.5) translate(0%,-25%);
-        background: #99e2d0;
-        opacity: 0.8;
-    }
-
-    60% {
-        transform: scale(1);
-    }
-
-    80% {
-        transform: scale(1);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
-
-@keyframes ball3 {
-    0% {
-        transform: scale(1);
-    }
-
-    20% {
-        transform: scale(1);
-    }
-
-    40% {
-        transform: scale(1);
-    }
-
-    60% {
-        transform: scale(1.5);
-        background: #ff79da;
-        opacity: 0.8;
-    }
-
-    80% {
-        transform: scale(1);
-    }
-
-    100% {
-        transform: scale(1);
+        100% {
+            opacity: 0;
+            z-index: -1;
         }
     }
+
+    @-webkit-keyframes loader {
+        0% {
+            opacity: 1;
+            z-index: 9999;
+        }
+
+        95% {
+            opacity: 1;
+        }
+
+        100% {
+            opacity: 0;
+            z-index: -1;
+        }
+    }
+
+    .loader p {
+        font-family: "Shrikhand", "Roboto", "Sans-serif";
+        font-size: 90px;
+        opacity: 0.7;
+    }
+
+    .ball {
+        background-color: rgb(0,0,0,0.2);
+        width: 10%;
+        height: 1.5em;
+        border-radius: 1em;
+        text-align: center;
+        font-size: 1em;
+        padding: 0.2em;
+        width: 1.5em;
+        border-style: none;
+        margin: 1em;
+        animation: ball .5s infinite ;
+        -webkit-animation: ball .5s infinite;
+    }
+
+    #ball-1 {
+        animation: ball1 1.25s infinite;
+        -webkit-animation: ball1 1.25s infinite;
+    }
+
+    #ball-2 {
+        animation: ball2 1.25s infinite;
+        -webkit-animation: ball2 1.25s infinite;
+    }
+
+    #ball-3 {
+        animation: ball3 1.25s infinite;
+        -webkit-animation: ball3 1.25s infinite;
+    }
+
+    @keyframes ball1 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1.5);
+            background: #9356dc;
+            opacity: 0.8;
+        }
+
+        40% {
+            transform: scale(1);
+        }
+
+        60% {
+            transform: scale(1);
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @-webkit-keyframes ball1 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1.5);
+            background: #9356dc;
+            opacity: 0.8;
+        }
+
+        40% {
+            transform: scale(1);
+        }
+
+        60% {
+            transform: scale(1);
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @keyframes ball2 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1.5) translate(0%,-25%);
+            background: #99e2d0;
+            opacity: 0.8;
+        }
+
+        60% {
+            transform: scale(1);
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @-webkit-keyframes ball2 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1.5) translate(0%,-25%);
+            background: #99e2d0;
+            opacity: 0.8;
+        }
+
+        60% {
+            transform: scale(1);
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @keyframes ball3 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1);
+        }
+
+        60% {
+            transform: scale(1.5);
+            background: #ff79da;
+            opacity: 0.8;
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @-webkit-keyframes ball3 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1);
+        }
+
+        60% {
+            transform: scale(1.5);
+            background: #ff79da;
+            opacity: 0.8;
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+    
+    /*--LOADER-FIN--*/
 
     h1 {
         font-size: 42px;
         font-family: "Shrikhand", Geneva, Tahoma, sans-serif;
         margin-top: 1%;
     }
+
+    /*--HEADER--*/
 
     header {
         flex-direction: row;
@@ -168,14 +279,9 @@
         margin-bottom: 2%;
     }
 
-/*    .information {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        margin-left: auto;
-        margin-right: auto;
-        width: 95%;
-    }*/
+    /*--HEADER-FIN--*/
+
+    /*--ARTICLE--*/
 
     article {
         padding-top: 2%;
@@ -212,6 +318,10 @@
         cursor: pointer;
     }
 
+    /*--ARTICLE-FIN--*/
+
+    /*--FONCTIONNEMENT--*/
+
     .fonctionnement {
         width: 100%;
         margin: 0;
@@ -230,6 +340,10 @@
         margin: 1% 3% 4% 0;
         width: 30%;
     }
+
+    /*--FONCTIONNEMENT-FIN--*/
+
+    /*--RESTAURANTS--*/
 
     .restaurants {
         flex-direction: row;
@@ -261,6 +375,10 @@
         margin: 1% 0 1% 0;
     }
 
+    /*--RESTAURANTS-FIN--*/
+
+    /*--FOOTER--*/
+
     footer {
         margin-top: 2%;
     }
@@ -275,5 +393,7 @@
         width: 90%;
         padding-bottom: 5%;
     }
+
+    /*--FOOTER-FIN--*/
 
 }
